--- a/Burg/Bergwerk/platformio.ini
+++ b/Burg/Bergwerk/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 lib_deps = 
 	https://github.com/DennisMoschina/Libraries-Modellbahn.git
 	arduino-libraries/Servo@^1.1.7
+
+monitor_speed = 115200
