--- a/Burg/Taster/platformio.ini
+++ b/Burg/Taster/platformio.ini
@@ -8,8 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
+[env]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = https://github.com/DennisMoschina/Libraries-Modellbahn.git
+lib_deps = 
+	https://github.com/DennisMoschina/Libraries-Modellbahn.git
+	dfrobot/DFRobotDFPlayerMini@^1.0.5
+	
+monitor_speed = 115200
+
+[env:Taster]
+src_filter = -<*> +<Taster.cpp>
+
+[env:Test]
+src_filter = -<*> +<Test.cpp>
